--- a/WebContent/bookcafe.css
+++ b/WebContent/bookcafe.css
@@ -123,6 +123,64 @@ ul.breadcrumb .member_rate {
     width:170px;
     height:68px;
 }
+
+/* 상단 전체메뉴 버튼 */
+#allMenuPannel {
+	display:none;
+	position: absolute;
+	margin-top:10px;
+	z-index:900;
+}
+.allMenu-container {
+  width: 800px;
+  height:310px;  
+  position: relative;
+  margin: auto;
+  background-color:#FFF;
+}
+.allMenu_list {
+	display: inline;
+	float: left;
+	width: 30%;
+}
+/* 메인상단 전체메뉴 시작 */
+.allMenu ul{
+    list-style: none outside;
+    margin:0;
+    padding:0;
+}
+.allMenu li{
+    font-size:1.38rem;
+    font-weight: 400;
+    padding:2px 10px;
+}
+.allMenu .title{
+    width:100%;
+    height:28px;
+    margin-bottom:8px;
+    padding:5px 0 0 10px;
+    color: white;    
+    text-align: left;
+    font-size:1.4rem;
+    font-weight: 800;
+    background-color: #555;    
+    border-radius: 3px;
+}
+.allMenu li a {
+    color:#000;
+}
+.allMenu li a {
+    color:#000;
+}
+.allMenuLine {
+    border-left:1px solid #ccc;
+    width:15px;
+    height:280px;
+    margin-left:15px;
+    display: inline;
+    float: left;
+}
+
 /* 공통 상단 메뉴 끝 */
 
 /* 공통 하단 시작 */
