--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -1,18 +1,45 @@
 @CHARSET "UTF-8";
 /* 메인전용 시작 */
 /* 메인슬라이드 시작 */
-.mySlides {display:none}
 
-/* Slideshow container */
+/* 슬라이드 외부 */
 .slideshow-container {
-  max-width: 100%;
+  width: 100%;
   height:337px;
   position: relative;
   margin: auto;
   border:2px solid #e6f2ff;
 }
+/* 슬라이드 내부 다음 이전 버튼 */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
 
-/* Caption text */
+/* 슬라이드 내부 다음 버튼 */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev {
+	left: 0;
+}
+
+/* 슬라이드 내부 버튼 호버시 검정배경 */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* 캡션 문자 */
 .text {
   color: #000;
   font-size: 2rem;
@@ -23,7 +50,7 @@
   text-align: center;
 }
 
-/* Style the slideshow list */
+/* 슬라이드 하단 리스트 */
 #slideshow_list {
     max-height:50px;
     margin-bottom:2%;
@@ -48,31 +75,35 @@ ul.slideshow_list li+li:before {
     color: #00ace6;
     content: "|";
 }
-ul.slideshow_list li a {
+
+/* 슬라이드 하단 리스트 버튼 */
+.dot {
     color: #00ace6;
     text-decoration: none;
     border: 3px solid transparent;
     border-radius: 15px;
     padding:0.3% 1.5%;
 }
-ul.slideshow_list li a:hover {
-    color: #00ace6;
+.dot.active, .dot:hover {
     border: 3px solid #0275d8;
-    border-radius: 15px;
     background-color:#fff;
-    padding:0.3% 1.5%;
 }
+
+/* 슬라이드 내부 리스트 */
 .slide-4, .slide-3 {
     margin:auto;
     width:100%;
 }
 .slide-4 img{
     margin: 0 1.3%;
-    width:22%;   
+    width:22%;
+    height:auto;
+    border:1px solid #eee;
 }
 .slide-3 img{
     margin: 0;
-    width:27%;   
+    width:27%;
+    height:auto;      
 }
 .slide-3 img.eb1{
     margin: 0 1.3%;
