--- a/WebContent/bookcafe.css
+++ b/WebContent/bookcafe.css
@@ -5,14 +5,10 @@
 
 body {
     font-family: 'NotoSansKR', 'Nanum Gothic', "Times New Roman", Times, sans-serif;
-    background-color: transparent;
-    margin:0;
-    padding:0;
 }
 #wrap, #headerwrap, #section, #footer {
     max-width:1200px;
-    margin:0 auto;
-    padding:0;
+    margin:auto;
     text-align:left;
 }
 
