--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -250,3 +250,16 @@ ul.slideshow_list li+li:before {
     height:auto;
 }
 /* 메인 오른쪽 끝 */
+/* 사진흐리게 */
+.bgBlur:before {
+  content: '';
+  position: absolute;
+  top: 0; left:0; right:0; bottom:0;
+  background: inherit;
+  z-index:-1;
+  filter: blur(6px); 
+  -webkit-filter: blur(6px); 
+  -moz-filter: blur(6px);
+  -o-filter: blur(6px);
+  filter:url(#blur);
+}
