--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -143,7 +143,7 @@ ul.slideshow_list li+li:before {
     font-weight: 400;
     padding:2px 0;
 }
-.main_lmenu .title{
+.main_lmenu .title a{
     font-size:1.5rem;
     font-weight: 600;
     color:#00ace6;
