--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -131,37 +131,53 @@ ul.slideshow_list li+li:before {
 @media only screen and (max-width: 300px) {
   .text {font-size: 0.687rem}
 }
-/* 메인슬라이드 끝 */
-/* 메인왼쪽메뉴 시작 */
+/* //메인슬라이드 */
+
+/* 메인왼쪽메뉴 */
 .main_lmenu {
     list-style: none outside;
     margin:0;
     padding:0;
 }
-.main_lmenu li{
+.main_lmenu li {
     font-size:1.3rem;
     font-weight: 400;
     padding:2px 0;
 }
-.main_lmenu .title a{
+.main_lmenu .title {
     font-size:1.5rem;
     font-weight: 600;
     color:#00ace6;
     margin-bottom:3px;
+    text-decoration:none
 }
 .main_lmenu li a{
+    font-size:1.3rem;
     color:#000;
+    text-decoration:none
 }
+.list-group .sub {
+	background-color:#eee;
+	color:#222;
+	font-weight: 600;
+	font-size:1.5rem;
+	text-decoration:none;
+}
+/* //메인왼쪽메뉴 */
+
 /* 메인 중앙책분류 시작 */
-.main_book_img{
+.main_book_img p {
     height:122px;
-    width: 100%;;
+    width: 100%;
     display:flex;    
     align-items:flex-end;
 }
-.main_book_img img{ 
+.main_book_img a img {
+	height:122px;
+    width: auto;
     display: block;
     margin: auto;
+    text-decoration:none
 }
 
 .main_book_titel{
@@ -169,6 +185,14 @@ ul.slideshow_list li+li:before {
     font-weight: 600;
     color:#666;
     margin:10px 0 20px 0;    
+}
+
+.main_book_txt a{
+    font-size:1.3rem;
+    font-weight: 600;
+    padding:5px 0;
+    color:#000;
+    text-decoration:none
 }
 
 .main_book_info p{
@@ -209,12 +233,17 @@ ul.slideshow_list li+li:before {
 }
 .best10 ul.best10_text {
     list-style-type: none;
+    color:#000;
     margin: 0;
     padding: 0;
 }
 .best10 ul.best10_text li{
     margin:5px;
+}
+.best10 ul.best10_text li a{
+    color:#000;
     font-size:1.2rem;
+    text-decoration:none;
 }
 .best10 .title{
     font-size:1.3rem;
@@ -227,6 +256,7 @@ ul.slideshow_list li+li:before {
     width:20px;
     height:16px;
     margin-right:5px;
+    margin-top:0.3rem;
     color: white;    
     text-align: center;
     font-size:1.2rem;
@@ -239,9 +269,15 @@ ul.slideshow_list li+li:before {
     color: white;
 }
 .best10_text .best10_img{
+	color:#000;
     float: left;
     width:85%;
     margin-bottom:5px;
+    text-decoration:none;
+}
+.best10_text .best10_img a{
+    color:#000;  
+    text-decoration:none;
 }
 .best10_text .best10_img img{
     padding-right:3px;
