--- a/WebContent/bookcafe2.css
+++ b/WebContent/bookcafe2.css
@@ -1,44 +1,22 @@
 @CHARSET "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@media (max-width:360px){html{font-size:10px;}}
-@media (min-width:361px) and (max-width:399px){html{font-size:11px;}}
-@media (min-width:400px) and (max-width:439px){html{font-size:12px;}}
-@media (min-width:440px) and (max-width:479px){html{font-size:13px;}}
-@media (min-width:480px) and (max-width:519px){html{font-size:14px;}}
-@media (min-width:520px) and (max-width:559px){html{font-size:15px;}}
-@media (min-width:560px) and (max-width:599px){html{font-size:16px;}}
-@media (min-width:600px) and (max-width:639px){html{font-size:17px;}}
-@media (min-width:640px) and (max-width:679px){html{font-size:18px;}}
-@media (min-width:680px) and (max-width:719px){html{font-size:19px;}}
-@media (min-width:720px) and (max-width:759px){html{font-size:20px;}}
-@media (min-width:760px) and (max-width:799px){html{font-size:21px;}}
-@media (min-width:800px) and (max-width:839px){html{font-size:22px;}}
-@media (min-width:840px) and (max-width:879px){html{font-size:23px;}}
-@media (min-width:880px){html{font-size:24px;}}
 
 * {box-sizing:border-box}
 
 body {
     font-family: 'NotoSansKR', 'Nanum Gothic', "Times New Roman", Times, sans-serif;
 }
-#wrap, #headerwrap, #section, #footer {
-    max-width:1200px;
-    margin:auto;
-    text-align:left;
+
+#topHeadAd,#ad1Div,#bestDiv,#slideDiv,#footBrand {
+	display: none;
 }
 
-/* 상단 광고 */
-#topheader h2{
-    font-size:1.3rem;
-}
-/* 상단 고정메뉴 */
-.affix {
-      top: 0;
-      width: 100%;
-}
-.affix + .container-fluid {
-      padding-top: 70px;
+#wrap, #headerwrap, #section, #footer {
+    max-width:100%;
+    margin:auto;
+    padding:0 1rem;
+    text-align:left;
 }
 
 #topheaderwrap {
@@ -51,7 +29,7 @@ body {
 #topheaderwrap ul.nav-tabs {
     list-style: none;
     background-color: transparent;
-    font-size: 0.6rem;
+    font-size: 1.4rem;
 }
 #topheaderwrap ul.nav-tabs li a {
     height:36px;
@@ -70,10 +48,10 @@ body {
 
 /* 상단 오른쪽 */
 #topheaderwrap ul.breadcrumb {
-    padding: 10px 16px 0px 16px;
+    padding: 12px 16px 0px 16px;
     list-style: none;
     background-color: transparent;
-    font-size: 0.6rem;
+    font-size: 1.2rem;
 }
 #topheaderwrap ul.breadcrumb li {
     display: inline;
@@ -92,7 +70,7 @@ body {
     text-decoration: underline;
 }
 #topheaderwrap ul.breadcrumb .member_rate {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: #fff;
     background-color: red;
     padding:3px 5px;
@@ -101,130 +79,75 @@ body {
 /* 최상단 메뉴 끝 */
 /* 최상단 로고 검색창 */
 #headerwrap {
-    margin-bottom:10px;	
+    margin-bottom:1.5rem;
 }
 #headerwrap .navbar-brand {
-    font-size:1.2rem;
+    font-size:1.5rem;
     color:#0275d8;
+    margin-top:-0.6rem;
+    margin-left:-1rem;    
 }
 #headerwrap .navbar-brand span{
-    font-size:1.4rem;
+    font-size:2rem;
     color:#0275d8;
 }
 #headerwrap .navbar-brand font{
-    font-size:0.9rem;
+    font-size:1.2rem;
     color:#0275d8;
 }
 
-headerwrap .navbar-form {
+#searchform {
     width:100%;
-    margin-top:15px;
+    margin-top:1.2rem;
+    margin-left:2rem;
 }
 
 #sel1 {
+	width:20%;
     color:#0275d8;
-    font-weight: 500;
+    font-weight: 600;
     background-color:#e6f2ff;
 }
 
-headerwrap .navbar-form #search {
-    width:52%;
+#search {
+    width:40%;
     background-color:#e6f2ff;
 }
 
-#ad1 {    
-    background-color: transparent;
-    width:170px;
-    height:68px;
+/* 상단 구분선  */
+#headerLine {
+    border-bottom:1px solid #33afe9;
+    margin-bottom:1rem;
 }
-
-/* 상단 전체메뉴 버튼 */
-#allMenuPannel {
-	display:none;
-	position: absolute;
-	margin-top:10px;
-	z-index:900;
-}
-.allMenu-container {
-  width: 30rem;
-  height:310px;  
-  position: relative;
-  margin: auto;
-  background-color:#FFF;
-  border:1px solid #0275d8;
-}
-.allMenu_list {
-	display: inline;
-	float: left;
-	width: 30%;
-}
-/* 메인상단 전체메뉴 시작 */
-.allMenu ul{
-    list-style: none outside;
-    margin:0;
-    padding:0;
-}
-.allMenu li{
-    font-size:0.6rem;
-    font-weight: 400;
-    padding:2px 10px;
-}
-.allMenu .title{
-    width:100%;
-    height:28px;
-    margin-bottom:8px;
-    padding:5px 0 0 10px;
-    color: white;    
-    text-align: left;
-    font-size:0.6rem;
-    font-weight: 800;
-    background-color: #555;    
-    border-radius: 3px;
-}
-.allMenu li a {
-    color:#000;
-}
-.allMenu li a {
-    color:#000;
-}
-.allMenuLine {
-    border-left:1px solid #ccc;
-    width:15px;
-    height:280px;
-    margin-left:15px;
-    display: inline;
-    float: left;
-}
-
-/* 공통 상단 메뉴 끝 */
+/* //공통 상단 */
 
 /* 공통 하단 시작 */
 #footer {
-    padding:20px 10px;
-    font-size:0.6rem;
+    padding:0.5rem 1rem;
+    font-size:1.2rem;
     line-height: 1.8;
 }
 #footer p{
-    margin-top:20px;
-    font-size:0.65rem;
+    margin-top:0.5rem;
+    font-size:1.3rem;
 }
 .footer_line{
     background-color:#0275d8;
-    height:5px;
+    height:0.5rem;
 }
 .footer_header{
     background-color:#F4F4F4;
-    height:30px;
-    margin-bottom:20px;
+    height:3rem;
+    margin-bottom:2rem;
 }
 
 .footer_header ul.breadcrumb {
-    padding: 7px 15px 0 20px;
-    font-size: 0.6rem;
+    padding: 0.7rem 1.5rem 0 2rem;
+    font-size: 1.2rem;
     width:100%;
 }
 .footer_header ul.breadcrumb li+li:before {
-    padding:0 7px;
+    padding:0 0.7rem;
     color: #999;
     content: "|";
 }
@@ -240,10 +163,97 @@ headerwrap .navbar-form #search {
 
 /* 고정 탑 메뉴 */
 #MOVE_TOP_BTN{
+    color: #00ace6;
+    font-size: 5rem;
     position: fixed; 
-    bottom: 10px; 
-    right: 10px; 
+    bottom: 15px; 
+    right: 30px; 
     z-index: 100; 
     cursor: pointer; 
     display: block;
+    opacity: 0.2;
+}
+
+/* 메인 오른쪽 광고 베스트셀러 시작 */
+#ad2 {
+    border:1px solid #e6f2ff;
+    background-color: transparent;
+    width:216px;
+    height:144px;
+    margin-bottom:10px;
+}
+
+.best10 {
+    width:216px;
+    border:1px solid #e6f2ff;
+    background-color: #fff;
+    padding:10px;
+}
+.best10 ul.best10_text {
+    list-style-type: none;
+    color:#000;
+    margin: 0;
+    padding: 0;
+}
+.best10 ul.best10_text li{
+    margin:5px;
+}
+.best10 ul.best10_text li a{
+    color:#000;
+    font-size:1.2rem;
+    text-decoration:none;
+}
+.best10 .title{
+    font-size:1.3rem;
+    padding:1px 0px 5px 10px;
+    font-weight: 600;
+    color:#666;
+}
+.best10_text .number{
+    float: left;
+    width:20px;
+    height:16px;
+    margin-right:5px;
+    margin-top:0.3rem;
+    color: white;    
+    text-align: center;
+    font-size:1.2rem;
+    background-color: #00ace6;    
+    border-radius: 3px;
+}
+.best10_text .active {
+    margin-right:1px;
+    background-color: #ff8c1a;
+    color: white;
+}
+.best10_text .best10_img{
+    color:#000;
+    float: left;
+    width:85%;
+    margin-bottom:5px;
+    text-decoration:none;
+}
+.best10_text .best10_img a{
+    color:#000;  
+    text-decoration:none;
+}
+.best10_text .best10_img img{
+    padding-right:3px;
+    float:left;
+    width:65px;
+    height:auto;
+}
+/* 메인 오른쪽 끝 */
+/* 사진흐리게 */
+.bgBlur:before {
+  content: '';
+  position: absolute;
+  top: 0; left:0; right:0; bottom:0;
+  background: inherit;
+  z-index:-1;
+  filter: blur(6px); 
+  -webkit-filter: blur(6px); 
+  -moz-filter: blur(6px);
+  -o-filter: blur(6px);
+  filter:url(#blur);
 }
