--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -5,7 +5,7 @@
 /* 슬라이드 외부 */
 .slideshow-container {
   width: 100%;
-  height:417px;
+  height:auto;
   position: relative;
   margin: auto;
   border:2px solid #e6f2ff;
@@ -39,20 +39,9 @@
   background-color: rgba(0,0,0,0.8);
 }
 
-/* 캡션 문자 */
-.text {
-  color: #000;
-  font-size: 2rem;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 18px;
-  width: 100%;
-  text-align: center;
-}
-
 /* 슬라이드 하단 리스트 */
 #slideshow_list {
-    max-height:50px;
+    max-height:5rem;
     margin-bottom:2%;
     background-color:#e6f2ff;
     border:1px solid #ccc;
@@ -62,7 +51,7 @@ ul.slideshow_list {
     color: #00ace6;
     list-style: none;
     background-color: transparent;
-    font-size: 1.6rem;
+    font-size: 120%;
     font-weight: 600;
     width:100%
 }
@@ -75,6 +64,12 @@ ul.slideshow_list li+li:before {
     color: #00ace6;
     content: "|";
 }
+@media (max-width: 900px) {
+	ul.slideshow_list li+li:before {
+		padding: 0.8% 2%;
+	}
+}
+
 
 /* 슬라이드 하단 리스트 버튼 */
 .dot {
@@ -96,19 +91,19 @@ ul.slideshow_list li+li:before {
 }
 .slide-4 img{
     margin: 0 1.3%;
-    width:22%;
+    width:21.5%;
     height:auto;
     border:1px solid #eee;
 }
 .slide-3 img{
     margin: 0;
-    width:27%;
+    width:26%;
     height:auto;      
 }
 .slide-3 img.eb1{
     margin: 0 1.3%;
-    width:47px;
-    height:337px;
+    width:3.937%;
+    height:auto;
 }
 
 /* Fading animation */
@@ -187,6 +182,9 @@ ul.slideshow_list li+li:before {
     margin:10px 0 20px 0;    
 }
 
+.main_book_txt {
+	height:60px;
+}
 .main_book_txt a{
     font-size:1.3rem;
     font-weight: 600;
@@ -218,86 +216,4 @@ ul.slideshow_list li+li:before {
      float:left;
 }
 /* 메인 중앙책분류 끝 */
-/* 메인 오른쪽 광고 베스트셀러 시작 */
-#ad2 {
-    border:1px solid #e6f2ff;
-    background-color: transparent;
-    width:216px;
-    height:144px;
-    margin-bottom:10px;
-}
 
-.best10 {
-    width:216px;
-    border:1px solid #e6f2ff;
-    background-color: #fff;
-    padding:10px;
-}
-.best10 ul.best10_text {
-    list-style-type: none;
-    color:#000;
-    margin: 0;
-    padding: 0;
-}
-.best10 ul.best10_text li{
-    margin:5px;
-}
-.best10 ul.best10_text li a{
-    color:#000;
-    font-size:1.2rem;
-    text-decoration:none;
-}
-.best10 .title{
-    font-size:1.3rem;
-    padding:1px 0px 5px 10px;
-    font-weight: 600;
-    color:#666;
-}
-.best10_text .number{
-    float: left;
-    width:20px;
-    height:16px;
-    margin-right:5px;
-    margin-top:0.3rem;
-    color: white;    
-    text-align: center;
-    font-size:1.2rem;
-    background-color: #00ace6;    
-    border-radius: 3px;
-}
-.best10_text .active {
-    margin-right:1px;
-    background-color: #ff8c1a;
-    color: white;
-}
-.best10_text .best10_img{
-	color:#000;
-    float: left;
-    width:85%;
-    margin-bottom:5px;
-    text-decoration:none;
-}
-.best10_text .best10_img a{
-    color:#000;  
-    text-decoration:none;
-}
-.best10_text .best10_img img{
-    padding-right:3px;
-    float:left;
-    width:65px;
-    height:auto;
-}
-/* 메인 오른쪽 끝 */
-/* 사진흐리게 */
-.bgBlur:before {
-  content: '';
-  position: absolute;
-  top: 0; left:0; right:0; bottom:0;
-  background: inherit;
-  z-index:-1;
-  filter: blur(6px); 
-  -webkit-filter: blur(6px); 
-  -moz-filter: blur(6px);
-  -o-filter: blur(6px);
-  filter:url(#blur);
-}
