--- a/WebContent/bookcafe.css
+++ b/WebContent/bookcafe.css
@@ -42,6 +42,7 @@ body {
     height:36px;
     color: #fff;
     text-decoration: none;
+    padding: 10px 10px;
 }
 #topheaderwrap ul.nav-tabs li:before {
     color: #0275d8;
@@ -64,7 +65,7 @@ body {
     display: inline;
 }
 #topheaderwrap ul.breadcrumb li+li:before {
-    padding: 8px;
+    padding: 4px;
     color: #fff;
     content: "|";
 }
