--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -95,6 +95,25 @@ ul.slideshow_list li+li:before {
     height:auto;
     border:1px solid #eee;
 }
+.slide-4-img{
+    margin: 0 0.6%;
+    padding-bottom:0.43%;
+    width:21.5%;
+    height:auto;
+    text-align:center;
+    border:1px solid #eee;
+    display:inline-block;
+}
+.slide-4-img a img{
+	margin:3%;
+    width:80%;
+    height:auto;
+}
+.slide-4-img a span{
+	font-size:1.6rem;
+	font-weight: bold;
+	display:block;
+}
 .slide-3 img{
     margin: 0;
     width:26%;
