--- a/WebContent/bookcafe2.css
+++ b/WebContent/bookcafe2.css
@@ -11,13 +11,16 @@ body {
 #topHeadAd,#ad1Div,#bestDiv,#slideDiv,#footBrand {
 	display: none;
 }
-
-#wrap, #headerwrap, #section, #footer {
-    max-width:100%;
-    margin:auto;
-    padding:0 1rem;
-    text-align:left;
+#psearch .col-xs-1{
+	margin:0;
+    padding:0;
 }
+
+/* 본문 내용 */
+#section {
+    padding:0 1rem;
+}
+/* 모바일 상단 고정 메뉴 */
 .jbFixed {
     position: fixed;
     top: 0px;
@@ -25,85 +28,34 @@ body {
 .jbMenu {
 	z-index: 1000;
 }
-
-/* 최상단 메뉴*/
-#topheaderwrap ul.nav-tabs {
-    list-style: none;
-    background-color: transparent;
-    font-size: 1.4rem;
-}
-#topheaderwrap ul.nav-tabs li a {
-    height:36px;
-    color: #fff;
-    text-decoration: none;
-}
-#topheaderwrap ul.nav-tabs li:before {
-    color: #0275d8;
-}
-#topheaderwrap ul.nav-tabs li a:hover {
-    color: #0275d8;
-}
-#topheaderwrap ul.nav-tabs li.active a {
-    color: #0275d8;
-}
-
-/* 상단 오른쪽 */
-#topheaderwrap ul.breadcrumb {
-    padding: 12px 16px 0px 16px;
-    list-style: none;
-    background-color: transparent;
-    font-size: 1.2rem;
-}
-#topheaderwrap ul.breadcrumb li {
-    display: inline;
-}
-#topheaderwrap ul.breadcrumb li+li:before {
-    padding: 8px;
-    color: #fff;
-    content: "|";
-}
-#topheaderwrap ul.breadcrumb li a {
-    color: #fff;
-    text-decoration: none;
-}
-#topheaderwrap ul.breadcrumb li a:hover {
-    color: #fff;
-    text-decoration: underline;
-}
-#topheaderwrap ul.breadcrumb .member_rate {
-    font-size: 1.1rem;
-    color: #fff;
-    background-color: red;
-    padding:3px 5px;
-    margin-right:10px;
-}
-/* 최상단 메뉴 끝 */
 /* 최상단 로고 검색창 */
 #headerwrap {
-    margin-bottom:1.5rem;
+	margin-top:1.5rem;
 }
-#headerwrap .navbar-brand {
-    font-size:1.5rem;
-    color:#0275d8;
-    margin-top:0.1rem;
-    margin-left:-2rem;    
-}
-#headerwrap .navbar-brand span{
+#headerwrap .fband {
     font-size:2rem;
     color:#0275d8;
+    margin-left:-0.8rem;    
 }
-#headerwrap .navbar-brand font{
-    font-size:1.2rem;
+#headerwrap .fband span{
+    font-size:2.3rem;
     color:#0275d8;
 }
-
-
-
-/* 상단 구분선  */
-#headerLine {
-    border-bottom:1px solid #33afe9;
-    margin-bottom:1rem;
+#headerwrap .fband font{
+    font-size:1.5rem;
+    color:#0275d8;
 }
+#headerwrap .divider{
+	margin:0 0.5rem;
+}
+#ftophead{
+	margin-bottom:1rem;
+}
+#ftopheadbtn a{
+	font-size:2rem;
+	color:#0275d8;
+}
+
 /* //공통 상단 */
 
 /* 공통 하단 시작 */
@@ -149,96 +101,12 @@ body {
 /* 고정 탑 메뉴 */
 #MOVE_TOP_BTN{
     color: #00ace6;
-    font-size: 5rem;
+    font-size: 6rem;
     position: fixed; 
     bottom: 15px; 
     right: 30px; 
     z-index: 100; 
     cursor: pointer; 
     display: block;
-    opacity: 0.2;
-}
-
-/* 메인 오른쪽 광고 베스트셀러 시작 */
-#ad2 {
-    border:1px solid #e6f2ff;
-    background-color: transparent;
-    width:216px;
-    height:144px;
-    margin-bottom:10px;
-}
-
-.best10 {
-    width:216px;
-    border:1px solid #e6f2ff;
-    background-color: #fff;
-    padding:10px;
-}
-.best10 ul.best10_text {
-    list-style-type: none;
-    color:#000;
-    margin: 0;
-    padding: 0;
-}
-.best10 ul.best10_text li{
-    margin:5px;
-}
-.best10 ul.best10_text li a{
-    color:#000;
-    font-size:1.2rem;
-    text-decoration:none;
-}
-.best10 .title{
-    font-size:1.3rem;
-    padding:1px 0px 5px 10px;
-    font-weight: 600;
-    color:#666;
-}
-.best10_text .number{
-    float: left;
-    width:20px;
-    height:16px;
-    margin-right:5px;
-    margin-top:0.3rem;
-    color: white;    
-    text-align: center;
-    font-size:1.2rem;
-    background-color: #00ace6;    
-    border-radius: 3px;
-}
-.best10_text .active {
-    margin-right:1px;
-    background-color: #ff8c1a;
-    color: white;
-}
-.best10_text .best10_img{
-    color:#000;
-    float: left;
-    width:85%;
-    margin-bottom:5px;
-    text-decoration:none;
-}
-.best10_text .best10_img a{
-    color:#000;  
-    text-decoration:none;
-}
-.best10_text .best10_img img{
-    padding-right:3px;
-    float:left;
-    width:65px;
-    height:auto;
-}
-/* 메인 오른쪽 끝 */
-/* 사진흐리게 */
-.bgBlur:before {
-  content: '';
-  position: absolute;
-  top: 0; left:0; right:0; bottom:0;
-  background: inherit;
-  z-index:-1;
-  filter: blur(6px); 
-  -webkit-filter: blur(6px); 
-  -moz-filter: blur(6px);
-  -o-filter: blur(6px);
-  filter:url(#blur);
+    opacity: 0.3;
 }
